# Create_Token_Rust

./: Anchor.toml
programs/Build_Token_With_Rust/: Cargo.toml
programs/Build_Token_With_Rust/src/: lib.rs
tests/: mymoneydapp.js
